# supercell-wx

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  conanfile.py  conanfile.txt  renovate.json  setup-debug.bat  setup-debug.sh  setup-multi.bat  setup-release.bat  setup-release.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
model/: .project  QMapbox.uml  boost.uml  scwx-papyrus.notation  scwx-papyrus.uml  scwx-papyrus_en_US.properties  scwx.notation  scwx.uml  scwx_en_US.properties  std.uml
scwx-qt/: CMakeLists.txt  qt6-linguist.cmake  scwx-qt.cmake  scwx-qt.qrc  wix.template.in
scwx-qt/gl/: color.frag  color.vert  geo_line.vert  geo_texture2d.vert  map_color.vert  overlay.frag  overlay.vert  radar.frag  radar.vert  text.frag  text.vert  texture1d.frag  texture1d.vert  texture2d.frag  texture2d_array.frag  texture2d_array.vert  threshold.geom
scwx-qt/res/: scwx-qt.rc  scwx-qt.rc.in
scwx-qt/res/config/: radar_sites.json
scwx-qt/res/icons/flaticon/: README.md
scwx-qt/res/linux/: supercell-wx.desktop
scwx-qt/res/palettes/wct/: CC.pal  DOD_DSD.pal  DR.pal  DV.pal  Default16.pal  ET.pal  HC.pal  KDP.pal  KDP2.pal  OHP.pal  SRV.pal  STP.pal  SW.pal  VIL.pal  ZDR.pal
scwx-qt/source/scwx/qt/: main.cpp  main_window.cpp  main_window.ui
scwx-qt/tools/: generate_counties_db.py  generate_versions.py  update_radar_sites.py
scwx-qt/ts/: scwx_en_US.ts
test/: CMakeLists.txt  test.cmake
test/source/scwx/: wxtest.cpp
test/source/scwx/awips/: coded_location.test.cpp  coded_time_motion_location.test.cpp  pvtec.test.cpp  text_product_file.test.cpp  ugc.test.cpp
test/source/scwx/common/: color_table.test.cpp  products.test.cpp
test/source/scwx/gr/: placefile.test.cpp
test/source/scwx/network/: dir_list.test.cpp
test/source/scwx/provider/: aws_level2_data_provider.test.cpp  aws_level3_data_provider.test.cpp  warnings_provider.test.cpp
test/source/scwx/util/: float.test.cpp  rangebuf.test.cpp  streams.test.cpp  strings.test.cpp  vectorbuf.test.cpp
test/source/scwx/wsr88d/: ar2v_file.test.cpp  level3_file.test.cpp  nexrad_file_factory.test.cpp
tools/: scwx_config.cmake  setup-common.bat  setup-common.sh
wxdata/: CMakeLists.txt  archive2_format.txt  wxdata.cmake
wxdata/cpp-feature-tests/: chrono_feature_test.cpp
wxdata/include/scwx/awips/: coded_location.hpp  coded_time_motion_location.hpp  impact_based_warnings.hpp  message.hpp  phenomenon.hpp  pvtec.hpp  significance.hpp  text_product_file.hpp  text_product_message.hpp  ugc.hpp  wmo_header.hpp
wxdata/include/scwx/common/: characters.hpp  color_table.hpp  constants.hpp  geographic.hpp  products.hpp  sites.hpp  types.hpp  vcp.hpp
wxdata/include/scwx/gr/: color.hpp  gr_types.hpp  placefile.hpp
wxdata/include/scwx/network/: cpr.hpp  dir_list.hpp
wxdata/include/scwx/provider/: aws_level2_data_provider.hpp  aws_level3_data_provider.hpp  aws_nexrad_data_provider.hpp  level2_data_provider.hpp  level2_data_provider_factory.hpp  nexrad_data_provider.hpp  nexrad_data_provider_factory.hpp  warnings_provider.hpp
wxdata/include/scwx/util/: digest.hpp  enum.hpp  environment.hpp  float.hpp  hash.hpp  iterator.hpp  logger.hpp  map.hpp  rangebuf.hpp  streams.hpp  strings.hpp  threads.hpp  time.hpp  vectorbuf.hpp
wxdata/include/scwx/wsr88d/: ar2v_file.hpp  level3_file.hpp  message.hpp  nexrad_file.hpp  nexrad_file_factory.hpp  wsr88d_types.hpp
wxdata/source/scwx/awips/: coded_location.cpp  coded_time_motion_location.cpp  impact_based_warnings.cpp  message.cpp  phenomenon.cpp  pvtec.cpp  significance.cpp  text_product_file.cpp  text_product_message.cpp  ugc.cpp  wmo_header.cpp
wxdata/source/scwx/common/: characters.cpp  color_table.cpp  geographic.cpp  products.cpp  sites.cpp  vcp.cpp
wxdata/source/scwx/gr/: color.cpp  placefile.cpp
wxdata/source/scwx/network/: cpr.cpp  dir_list.cpp
wxdata/source/scwx/provider/: aws_level2_data_provider.cpp  aws_level3_data_provider.cpp  aws_nexrad_data_provider.cpp  level2_data_provider.cpp  level2_data_provider_factory.cpp  nexrad_data_provider.cpp  nexrad_data_provider_factory.cpp  warnings_provider.cpp
wxdata/source/scwx/util/: digest.cpp  environment.cpp  (+9 more)
(+510 files in other folders)
